added ways for css

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       crossorigin="anonymous"
     />
     <link
-      href="css/articlePage-mobile-critical-1.42.4.css"
+      href="./content/20minutes-pouyanne-fr/css/articlePage-mobile-critical-1.42.4.css"
       type="text/css"
       rel="stylesheet"
     />
     <link
-      href="css/articlePage-mobile-no-critical-1.42.4.css"
+      href="./content/20minutes-pouyanne-fr/css/articlePage-mobile-no-critical-1.42.4.css"
       type="text/css"
       rel="stylesheet"
     />
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <link href="css/check.css" type="text/css" rel="stylesheet" />
-    <link href="css/fbstyle.css" type="text/css" rel="stylesheet" />
+    <link href="./content/20minutes-pouyanne-fr/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="./content/20minutes-pouyanne-fr/css/check.css" type="text/css" rel="stylesheet" />
+    <link href="./content/20minutes-pouyanne-fr/css/fbstyle.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body
